2006-12-01  Ralf Angeli  <angeli@caeruleus.net>

	* prv-xemacs.el (preview-move-point): Do not error out if
	`distance' is nil.

2006-10-24  David Kastrup  <dak@gnu.org>

	* prv-xemacs.el (preview-move-point): rearrange for calling
	`preview-auto-reveal' with DISTANCE argument.

	* prv-emacs.el (preview-remove-urgentization): Small optimization.
	(preview-move-point): Rearrange to be more efficient in the
	absence of overlays.

	* preview.el (preview-auto-reveal): Fetch keybindings of [left]
	and [right] at runtime.  Change proposed default accordingly.
	(preview-at-point): Fix change from 2005-03-15 for cursor
	restoration.
	(preview-auto-reveal-p): Implement integer MODE and take DISTANCE
	argument.
	(preview-auto-reveal): Allow DISTANCE.

2006-10-19  David Kastrup  <dak@gnu.org>

	* prv-xemacs.el (preview-defmacro): Use `fboundp' instead of
	`functionp'.
	(add-to-list): compatibility function not needed anymore since
	2006-10-11 change.

2006-10-18  David Kastrup  <dak@gnu.org>

	* preview.el (eval-when-compile): restore function definitions of
	compatibility macros.

	* prv-xemacs.el (preview-defmacro): Also redefine functions that
	actually exist, but save their definition.

	* preview.el (preview-parse-messages): Fix bad regexp.

2006-10-16  David Kastrup  <dak@gnu.org>

	* preview.el (preview-parse-messages): Rearrange the regexp for
	matching and renumber the matches and match strings accordingly.

2006-10-11  David Kastrup  <dak@gnu.org>

	* preview.el (LaTeX-preview-setup): Move setup of
	`TeX-error-description-list' and `TeX-expand-list' to AUCTeX
	proper.

2006-10-10  David Kastrup  <dak@gnu.org>

	* preview.el (preview-gs-filter): Fix prompt match expression to
	allow stack garbage > 10.
	(preview-gs-open): Assume `.runandhide' is defined (Ghostscript
	6.53 and greater).  Don't check Ghostscript stack for correctness,
	just leave garbage.
	(preview-prepare-fast-conversion): Use `.runandhide' to ignore
	garbage left by preamble (such as Omega fonts).